--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,7 @@
   "stream": true,
   "command": {
     "version": {
+      "message": "chore(release): publish",
       "private": false,
       "push": false
     }
