--- a/packages/eslint-config-proedis/package.json
+++ b/packages/eslint-config-proedis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-proedis",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Proedis ESLint configuration with TypeScript and optionally NextJS support",
   "keywords": [
     "proedis",
@@ -50,5 +50,6 @@
   "devDependencies": {
     "cpy-cli": "^4.2.0",
     "rimraf": "^4.1.2"
-  }
+  },
+  "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
