--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/tsconfig",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Proedis TypeScript configuration files",
   "keywords": [
     "proedis",
@@ -33,5 +33,6 @@
   "devDependencies": {
     "cpy-cli": "^4.2.0",
     "rimraf": "^4.1.2"
-  }
+  },
+  "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
