--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/types",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A set of TypeScript base Types",
   "keywords": [
     "proedis",
@@ -32,8 +32,9 @@
     "build": "mkdir build && cpy './**/*.*' '!build' '!node_modules' '!tsconfig.*' build"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "*",
+    "@proedis/tsconfig": "^1.0.1",
     "cpy-cli": "^4.2.0",
     "rimraf": "^4.1.2"
-  }
+  },
+  "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
