--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Set of smart utilities and reusable shared functions",
   "keywords": [
     "proedis",
@@ -28,6 +28,6 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "*"
+    "@proedis/tsconfig": "^1.0.1"
   }
 }
