--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/proedis/Npm.Suite/issues",
     "email": "info@proedis.net"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
   },
@@ -36,5 +39,6 @@
   },
   "peerDependencies": {
     "react": "^18.2.0"
-  }
+  },
+  "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
