--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,10 +24,14 @@
     "url": "https://github.com/proedis/Npm.Suite/issues",
     "email": "info@proedis.net"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.1"
-  }
+  },
+  "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
