--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,15 +30,18 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/utils": "^1.0.1"
+    "@proedis/utils": "^1.0.1",
+    "qs": "^6.11.0"
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.1",
     "@proedis/types": "^1.0.1",
+    "@types/qs": "^6.9.7",
     "fast-glob": "^3.2.12"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
