--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -32,10 +32,12 @@
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.1",
-    "@types/get-value": "^3.0.3"
+    "@types/get-value": "^3.0.3",
+    "@types/natural-compare": "^1.4.1"
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495",
   "dependencies": {
-    "get-value": "^3.0.1"
+    "get-value": "^3.0.1",
+    "natural-compare": "^1.4.0"
   }
 }
