--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "dependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1"
+  }
 }
