--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,7 +37,10 @@
     "@proedis/tsconfig": "^1.0.1",
     "@proedis/types": "^1.0.1",
     "@types/qs": "^6.9.7",
-    "fast-glob": "^3.2.12"
+    "fast-glob": "^3.2.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
