--- a/packages/formatters/tsconfig.declaration.json
+++ b/packages/formatters/tsconfig.declaration.json
@@ -13,6 +13,9 @@
     },
     {
       "path": "../types/tsconfig.declaration.json"
+    },
+    {
+      "path": "../utils/tsconfig.declaration.json"
     }
   ]
 }
