chore(build): completed references to tsconfig.declaration.json files

--- a/packages/formatters/tsconfig.declaration.json
+++ b/packages/formatters/tsconfig.declaration.json
@@ -9,6 +9,9 @@
   },
   "references": [
     {
+      "path": "../client/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
