--- a/packages/client/tsconfig.declaration.json
+++ b/packages/client/tsconfig.declaration.json
@@ -9,6 +9,9 @@
   },
   "references": [
     {
+      "path": "../formatters/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
