--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/client",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "A client class that could be used while developing WebApp with built-in authentication token management",
   "keywords": [
     "proedis",
@@ -36,8 +36,8 @@
     "@proedis/tsconfig": "^1.0.2"
   },
   "dependencies": {
-    "@proedis/types": "^1.0.2",
-    "@proedis/utils": "^1.0.2",
+    "@proedis/types": "^1.0.3",
+    "@proedis/utils": "^1.0.3",
     "axios": "^1.3.2",
     "eventemitter3": "^5.0.0",
     "logdown": "^3.3.1",
