--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.3.2",
     "eventemitter3": "^5.0.0",
     "logdown": "^3.3.1",
-    "store2": "^2.14.2"
+    "store2": "^2.14.2",
+    "ts-deepmerge": "^6.0.2"
   }
 }
