--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,14 +33,15 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "^1.0.2"
+    "@proedis/tsconfig": "^1.0.2",
+    "@types/object-hash": "^3.0.2"
   },
   "dependencies": {
     "@proedis/types": "^1.0.3",
     "@proedis/utils": "^1.0.3",
     "axios": "^1.3.2",
-    "eventemitter3": "^5.0.0",
     "logdown": "^3.3.1",
+    "object-hash": "^3.0.0",
     "rxjs": "^7.8.0",
     "store2": "^2.14.2",
     "ts-deepmerge": "^6.0.2"
