--- a/packages/react-client/tsconfig.declaration.json
+++ b/packages/react-client/tsconfig.declaration.json
@@ -18,10 +18,10 @@
       "path": "../react/tsconfig.declaration.json"
     },
     {
-      "path": "../react-client/tsconfig.declaration.json"
+      "path": "../types/tsconfig.declaration.json"
     },
     {
-      "path": "../types/tsconfig.declaration.json"
+      "path": "../utils/tsconfig.declaration.json"
     }
   ]
 }
