--- a/packages/react/tsconfig.declaration.json
+++ b/packages/react/tsconfig.declaration.json
@@ -15,6 +15,9 @@
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
+      "path": "../react-client/tsconfig.declaration.json"
+    },
+    {
       "path": "../types/tsconfig.declaration.json"
     },
     {
