--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -38,6 +38,7 @@
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495",
   "dependencies": {
+    "@proedis/types": "^1.0.4",
     "get-value": "^3.0.1",
     "natural-compare": "^1.4.0",
     "object-hash": "^3.0.0",
