--- a/packages/modeler/package.json
+++ b/packages/modeler/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@proedis/modeler",
   "version": "1.0.0",
+  "private": true,
   "description": "A library that could be used to style and model entities and objects based on class using decorators",
   "keywords": [
     "object",
@@ -29,7 +30,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup --config ../../rollup.config.mjs"
+    "build": "rollup --config ../../rollup.config.mjs",
+    "debug": "ts-node --project ../../tsconfig.dev.json src/playground.ts"
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.3"
