build: auto includes projects in tsconfig.declaration.json

--- a/packages/client/tsconfig.declaration.json
+++ b/packages/client/tsconfig.declaration.json
@@ -12,6 +12,9 @@
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
+      "path": "../modeler/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
