--- a/packages/modeler/tsconfig.declaration.json
+++ b/packages/modeler/tsconfig.declaration.json
@@ -9,6 +9,9 @@
   },
   "references": [
     {
+      "path": "../client/tsconfig.declaration.json"
+    },
+    {
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
