--- a/packages/utils/tsconfig.declaration.json
+++ b/packages/utils/tsconfig.declaration.json
@@ -15,6 +15,9 @@
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
+      "path": "../modeler/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
