--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,10 +32,13 @@
   "dependencies": {
     "@proedis/types": "^1.0.5",
     "@proedis/utils": "^1.0.8",
+    "clsx": "^1.2.1",
+    "kind-of": "^6.0.3",
     "qs": "^6.11.0"
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.4",
+    "@types/kind-of": "^6.0.0",
     "@types/qs": "^6.9.7",
     "react": "^18.2.0",
     "react-router-dom": "^6.8.1"
