--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.4",
+    "@tanstack/react-query": "^4.28.0",
     "react": "^18.2.0"
   },
   "peerDependencies": {
