--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "release:graph": "nx graph",
     "release:lint": "eslint ./packages",
-    "release:version": "lerna version",
+    "release:version": "lerna version --exact",
     "release:build": "lerna run build",
     "release:publish": "lerna publish from-package --contents build",
     "release": "yarn release:lint && yarn release:version && yarn release:build && yarn release:publish",
