--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -43,8 +43,8 @@
     "react": "^18.2.0"
   },
   "peerDependencies": {
-    "@proedis/client": "^1.0.1-alpha.4",
-    "@proedis/react": "^1.0.7",
+    "@proedis/client": "1.0.1-alpha.12",
+    "@proedis/react": "1.0.9",
     "@tanstack/react-query": "^4.24.6",
     "react": "^18.2.0"
   },
