--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -40,12 +40,16 @@
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.4",
     "@tanstack/react-query": "^4.28.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13",
     "react": "^18.2.0"
   },
   "peerDependencies": {
     "@proedis/client": "1.0.1-alpha.12",
     "@proedis/react": "1.0.9",
     "@tanstack/react-query": "^4.24.6",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13",
     "react": "^18.2.0"
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
