--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react-client",
-  "version": "1.0.1-alpha.8",
+  "version": "1.1.0",
   "description": "Wrapper for @proedis/client repository to use it with React",
   "keywords": [
     "proedis",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@proedis/types": "^1.0.5",
-    "@proedis/utils": "^1.0.8",
+    "@proedis/utils": "1.1.0",
     "@tanstack/react-query-devtools": "^4.24.6"
   },
   "devDependencies": {
