--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "A set of React Hooks, that add UI or Core functionality to your Apps",
   "keywords": [
     "proedis",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@proedis/types": "^1.0.5",
-    "@proedis/utils": "^1.0.8",
+    "@proedis/utils": "1.1.0",
     "clsx": "^1.2.1",
     "kind-of": "^6.0.3",
     "qs": "^6.11.0"
