--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/client",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A client class that could be used while developing WebApp with built-in authentication token management",
   "keywords": [
     "proedis",
@@ -36,8 +36,8 @@
     "@proedis/tsconfig": "^1.0.4"
   },
   "dependencies": {
-    "@proedis/types": "^1.0.5",
-    "@proedis/utils": "1.1.0",
+    "@proedis/types": "1.0.6",
+    "@proedis/utils": "1.1.1",
     "axios": "^1.3.2",
     "logdown": "^3.3.1",
     "rxjs": "^7.8.0",
