--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react-client",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Wrapper for @proedis/client repository to use it with React",
   "keywords": [
     "proedis",
@@ -33,8 +33,8 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/types": "^1.0.5",
-    "@proedis/utils": "1.1.0",
+    "@proedis/types": "1.0.6",
+    "@proedis/utils": "1.1.1",
     "@tanstack/react-query-devtools": "^4.24.6"
   },
   "devDependencies": {
