--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/utils",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Set of smart utilities and reusable shared functions",
   "keywords": [
     "proedis",
@@ -38,7 +38,7 @@
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495",
   "dependencies": {
-    "@proedis/types": "^1.0.5",
+    "@proedis/types": "1.0.6",
     "get-value": "^3.0.1",
     "natural-compare": "^1.4.0",
     "object-hash": "^3.0.0",
