feat(client): porting of class-transformer functionality to Client
BREAKING CHANGE: The 'transformer' arguments of useClientQuery React
Hook has been removed and placed directly inside requestConfig object

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -33,6 +33,8 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
+    "@proedis/client": "1.1.1",
+    "@proedis/react": "1.1.2",
     "@proedis/types": "1.0.6",
     "@proedis/utils": "1.1.1",
     "@tanstack/react-query-devtools": "^4.24.6"
@@ -40,17 +42,11 @@
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.4",
     "@tanstack/react-query": "^4.28.0",
-    "class-transformer": "^0.5.1",
-    "react": "^18.2.0",
-    "reflect-metadata": "^0.1.13"
+    "react": "^18.2.0"
   },
   "peerDependencies": {
-    "@proedis/client": "^1.0.1-alpha.12",
-    "@proedis/react": "^1.0.10",
     "@tanstack/react-query": "^4.24.6",
-    "class-transformer": "^0.5.1",
-    "react": "^18.2.0",
-    "reflect-metadata": "^0.1.13"
+    "react": "^18.2.0"
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
