--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,7 +33,9 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "^1.0.4"
+    "@proedis/tsconfig": "^1.0.4",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13"
   },
   "dependencies": {
     "@proedis/types": "1.0.6",
@@ -42,5 +44,9 @@
     "logdown": "^3.3.1",
     "rxjs": "^7.8.0",
     "store2": "^2.14.2"
+  },
+  "peerDependencies": {
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
