--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -41,10 +41,12 @@
   },
   "devDependencies": {
     "@proedis/tsconfig": "^1.0.4",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@tanstack/react-query": "^4.28.0",
     "react": "^18.2.0"
   },
   "peerDependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@tanstack/react-query": "^4.24.6",
     "react": "^18.2.0"
   },
