--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/client",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A client class that could be used while developing WebApp with built-in authentication token management",
   "keywords": [
     "proedis",
@@ -33,13 +33,13 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "^1.0.4",
+    "@proedis/tsconfig": "1.1.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13"
   },
   "dependencies": {
-    "@proedis/types": "1.0.6",
-    "@proedis/utils": "1.1.3",
+    "@proedis/types": "1.0.7",
+    "@proedis/utils": "1.1.4",
     "axios": "^1.3.2",
     "logdown": "^3.3.1",
     "rxjs": "^7.8.0",
