--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -33,9 +33,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@proedis/react": "1.1.4",
-    "@proedis/types": "1.0.6",
-    "@proedis/utils": "1.1.3",
+    "@proedis/react": "1.1.5",
+    "@proedis/types": "1.0.7",
+    "@proedis/utils": "1.1.4",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-window": "^1.8.5",
     "@types/rfdc": "^1.2.0",
@@ -54,7 +54,7 @@
     "@mantine/notifications": "^6.0.8",
     "@mantine/styles": "^6.0.11",
     "@mantine/utils": "^6.0.8",
-    "@proedis/tsconfig": "^1.0.4",
+    "@proedis/tsconfig": "1.1.0",
     "@types/deepmerge": "^2.2.0",
     "@types/tinycolor2": "^1.4.3",
     "react": "^18.2.0",
