--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react-client",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Wrapper for @proedis/client repository to use it with React",
   "keywords": [
     "proedis",
@@ -33,14 +33,14 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/client": "1.2.1",
-    "@proedis/react": "1.1.4",
-    "@proedis/types": "1.0.6",
-    "@proedis/utils": "1.1.3",
+    "@proedis/client": "1.3.0",
+    "@proedis/react": "1.1.5",
+    "@proedis/types": "1.0.7",
+    "@proedis/utils": "1.1.4",
     "@tanstack/react-query-devtools": "^4.24.6"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "^1.0.4",
+    "@proedis/tsconfig": "1.1.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@tanstack/react-query": "^4.28.0",
     "react": "^18.2.0"
