--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "A set of React Hooks, that add UI or Core functionality to your Apps",
   "keywords": [
     "proedis",
@@ -30,14 +30,14 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/types": "1.0.6",
-    "@proedis/utils": "1.1.3",
+    "@proedis/types": "1.0.7",
+    "@proedis/utils": "1.1.4",
     "clsx": "^1.2.1",
     "kind-of": "^6.0.3",
     "qs": "^6.11.0"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "^1.0.4",
+    "@proedis/tsconfig": "1.1.0",
     "@types/kind-of": "^6.0.0",
     "@types/qs": "^6.9.7",
     "react": "^18.2.0",
