--- a/packages/utils/tsconfig.declaration.json
+++ b/packages/utils/tsconfig.declaration.json
@@ -27,6 +27,9 @@
       "path": "../react-client/tsconfig.declaration.json"
     },
     {
+      "path": "../react-native-client/tsconfig.declaration.json"
+    },
+    {
       "path": "../types/tsconfig.declaration.json"
     }
   ]
