--- a/packages/react-native-client/package.json
+++ b/packages/react-native-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/react-native-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Dedicated Package and Utility to use @proedis/client on react-native",
   "keywords": [
     "proedis",
@@ -34,8 +34,8 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@proedis/utils": "^1.1.5"
+    "@proedis/utils": "1.1.6",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@proedis/tsconfig": "1.1.0"
