--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -32,16 +32,20 @@
   },
   "devDependencies": {
     "@proedis/tsconfig": "1.1.1",
+    "@types/clone-deep": "^4.0.2",
     "@types/get-value": "^3.0.3",
     "@types/natural-compare": "^1.4.1",
-    "@types/object-hash": "^3.0.2"
+    "@types/object-hash": "^3.0.2",
+    "@types/set-value": "^4.0.1"
   },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495",
   "dependencies": {
     "@proedis/types": "1.0.8",
+    "clone-deep": "^4.0.1",
     "get-value": "^3.0.1",
     "natural-compare": "^1.4.0",
     "object-hash": "^3.0.0",
+    "set-value": "^4.1.0",
     "ts-deepmerge": "^6.0.2"
   }
 }
