--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -34,5 +34,8 @@
     "cpy-cli": "^4.2.0",
     "rimraf": "^4.1.2"
   },
+  "peerDependencies": {
+    "typescript": "5.2.2"
+  },
   "gitHead": "8cba9bf577350eaf9ee04be523bd47053c9e7495"
 }
