refactor(eslint): removed direct dependencies for eslint in favour of peerDependencies declaration

--- a/packages/eslint-config-proedis/package.json
+++ b/packages/eslint-config-proedis/package.json
@@ -30,14 +30,14 @@
   "bin": {
     "eslint-proedis-init": "./bin/init.js"
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "eslint": "8.53.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0"
   },
   "publishConfig": {
     "access": "public"
