--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "eslint": "8.53.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-proedis": "*",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "fast-glob": "^3.2.12",
     "fs-extra": "^9.1.0",
     "husky": "^8.0.0",
