--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -34,5 +34,6 @@
   },
   "devDependencies": {
     "@proedis/tsconfig": "1.2.0"
-  }
+  },
+  "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
