--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,11 @@
     "proedis": "./index.js"
   },
   "scripts": {
-    "dev": "ts-node --project tsconfig.scripts.json src/index.ts"
+    "dev": "ts-node --project tsconfig.scripts.json src/index.ts",
+    "build:clean": "rimraf dist",
+    "build:compile": "tsc",
+    "build:copy-files": "cp package.json ./dist && cpy 'src/**/*.eta' dist",
+    "build": "yarn run build:clean && yarn run build:compile && yarn run build:copy-files"
   },
   "license": "MIT",
   "author": {
@@ -30,16 +34,20 @@
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "11.1.0",
-    "eta": "3.1.1",
+    "ejs": "3.1.9",
+    "eslint-config-proedis": "2.0.0",
     "inquirer": "8.2.6",
+    "latest-version": "5.1.0",
     "node-fetch": "2.7.0",
     "ora": "5.4.1",
     "package-json": "6.5.0",
-    "pretty-error": "^4.0.0",
+    "prettier": "3.0.3",
+    "pretty-error": "4.0.0",
     "semver": "7.5.4"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.4",
+    "@types/ejs": "3.1.5",
+    "@types/inquirer": "9.0.6",
     "@types/node-fetch": "2.6.4",
     "cpy-cli": "5.0.0",
     "type-fest": "4.6.0"
