--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "extends": "@proedis/tsconfig/base",
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "outDir": "./build",
+    "importHelpers": false,
+    "noEmit": false
+  },
+  "exclude": [
+    "node_modules"
+  ],
   "include": [
     "src"
   ]
