fix(cli): tsconfig update

--- a/packages/cli/tsconfig.declaration.json
+++ b/packages/cli/tsconfig.declaration.json
@@ -25,6 +25,9 @@
     },
     {
       "path": "../types/tsconfig.declaration.json"
+    },
+    {
+      "path": "../utils/tsconfig.declaration.json"
     }
   ]
 }
