--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "@proedis/tsconfig/base",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ES2015",
     "target": "ES2020",
-    "outDir": "./build",
     "importHelpers": false,
     "noEmit": false
   },
