--- a/packages/eslint-config-proedis/package.json
+++ b/packages/eslint-config-proedis/package.json
@@ -12,40 +12,20 @@
     "styleguide"
   ],
   "main": "index.js",
-  "license": "MIT",
-  "author": {
-    "name": "Marco Cavanna",
-    "email": "m.cavanna@proedis.net"
-  },
-  "homepage": "https://github.com/proedis/Npm.Suite",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/proedis/Npm.Suite.git",
-    "directory": "packages/eslint-config-proedis"
-  },
-  "bugs": {
-    "url": "https://github.com/proedis/Npm.Suite/issues",
-    "email": "info@proedis.net"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "eslint": "8.53.0",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
-    "prebuild": "rimraf build",
-    "build": "mkdir build && cpy './**/*.*' '!build' '!node_modules' build"
+    "build": "node ../../scripts/compile-plain.js"
   },
-  "devDependencies": {
-    "cpy-cli": "^4.2.0",
-    "rimraf": "^4.1.2"
+  "proedisMetadata": {
+    "reflectPeerDependencies": [
+      "root:@typescript-eslint/eslint-plugin",
+      "root:@typescript-eslint/parser",
+      "root:eslint",
+      "root:eslint-config-airbnb-typescript",
+      "root:eslint-plugin-import",
+      "root:eslint-plugin-react",
+      "root:eslint-plugin-react-hooks"
+    ],
+    "noMain": "true"
   },
   "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
