--- a/package.json
+++ b/package.json
@@ -5,6 +5,24 @@
   "workspaces": [
     "packages/*"
   ],
+  "homepage": "https://github.com/proedis/Npm.Suite",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/proedis/Npm.Suite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/proedis/Npm.Suite/issues",
+    "email": "info@proedis.net"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Proedis S.r.l.",
+    "url": "https://proedis.net",
+    "email": "info@proedis.net"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "release:graph": "nx graph",
     "release:lint": "eslint ./packages",
@@ -20,10 +38,13 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@tanstack/react-query": "^4.28.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
+    "cpy": "8.1.2",
+    "class-transformer": "^0.5.1",
     "eslint": "8.53.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-proedis": "*",
@@ -34,11 +55,17 @@
     "fs-extra": "^9.1.0",
     "husky": "^8.0.0",
     "lerna": "^6.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "reflect-metadata": "^0.1.13",
     "rollup": "^3.15.0",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-hashbang": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
+    "rxjs": "7.8.1",
     "shelljs": "^0.8.5",
-    "typescript": "^4.9.5"
+    "typescript": "5.2.2"
   },
   "engines": {
     "node": ">=16.0.0"
