--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,43 +4,15 @@
   "main": "./index.js",
   "private": true,
   "bin": {
-    "proedis": "./index.js"
+    "proedis": "./cjs/index.js"
   },
   "scripts": {
-    "dev": "ts-node --project tsconfig.scripts.json src/index.ts",
-    "build:clean": "rimraf dist",
-    "build:compile": "tsc",
-    "build:copy-files": "cp package.json ./build && cpy 'src/**/*.ejs' build",
-    "build": "yarn run build:clean && yarn run build:compile && yarn run build:copy-files"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "Marco Cavanna",
-    "email": "m.cavanna@proedis.net",
-    "url": "https://proedis.net"
-  },
-  "homepage": "https://github.com/proedis/Yard4.Web",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/proedis/Yard4.Web.git"
-  },
-  "bugs": {
-    "url": "https://github.com/proedis/Yard4.Web/issues",
-    "email": "info@proedis.net"
-  },
-  "publishConfig": {
-    "access": "public"
+    "build": "rollup --config ../../rollup.config.mjs",
+    "postbuild": "cpy 'src/**/*.ejs' build/esm && cpy 'src/**/*.ejs' build/cjs"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
     "chalk": "4.1.2",
     "commander": "11.1.0",
-    "eslint": "8.53.0",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
     "ejs": "3.1.9",
     "glob": "10.3.10",
     "inquirer": "8.2.6",
@@ -59,6 +31,5 @@
     "@types/node-fetch": "2.6.4",
     "cpy-cli": "5.0.0",
     "type-fest": "4.6.0"
-  },
-  "peerDependencies": {}
+  }
 }
