--- a/packages/react-native-client/package.json
+++ b/packages/react-native-client/package.json
@@ -12,24 +12,6 @@
     "react-native"
   ],
   "main": "src/index.ts",
-  "license": "MIT",
-  "author": {
-    "name": "Marco Cavanna",
-    "email": "m.cavanna@proedis.net"
-  },
-  "homepage": "https://github.com/proedis/Npm.Suite",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/proedis/Npm.Suite.git",
-    "directory": "packages/react-native-client"
-  },
-  "bugs": {
-    "url": "https://github.com/proedis/Npm.Suite/issues",
-    "email": "info@proedis.net"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
   },
@@ -38,10 +20,14 @@
     "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
+    "@proedis/client": "1.6.10",
     "@proedis/tsconfig": "1.2.0"
   },
-  "peerDependencies": {
-    "@proedis/client": "^1.4.5"
+  "proedisMetadata": {
+    "reflectPeerDependencies": [
+      "@proedis/client",
+      "root:react"
+    ]
   },
   "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
