--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,26 +9,17 @@
     "utils"
   ],
   "main": "src/index.ts",
-  "license": "MIT",
-  "author": {
-    "name": "Marco Cavanna",
-    "email": "m.cavanna@proedis.net"
-  },
-  "homepage": "https://github.com/proedis/Npm.Suite",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/proedis/Npm.Suite.git",
-    "directory": "packages/utils"
-  },
-  "bugs": {
-    "url": "https://github.com/proedis/Npm.Suite/issues",
-    "email": "info@proedis.net"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
+  },
+  "dependencies": {
+    "@proedis/types": "1.0.11",
+    "clone-deep": "^4.0.1",
+    "get-value": "^3.0.1",
+    "natural-compare": "^1.4.0",
+    "object-hash": "^3.0.0",
+    "set-value": "^4.1.0",
+    "ts-deepmerge": "^6.0.2"
   },
   "devDependencies": {
     "@proedis/tsconfig": "1.2.0",
@@ -38,14 +29,5 @@
     "@types/object-hash": "^3.0.2",
     "@types/set-value": "^4.0.1"
   },
-  "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8",
-  "dependencies": {
-    "@proedis/types": "1.0.11",
-    "clone-deep": "^4.0.1",
-    "get-value": "^3.0.1",
-    "natural-compare": "^1.4.0",
-    "object-hash": "^3.0.0",
-    "set-value": "^4.1.0",
-    "ts-deepmerge": "^6.0.2"
-  }
+  "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
