chore(cli): dev script to local test cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,7 @@
     "proedis": "./cjs/index.js"
   },
   "scripts": {
+    "dev": "ts-node --project tsconfig.scripts.json src/index.ts",
     "build": "rollup --config ../../rollup.config.mjs",
     "postbuild": "cpy 'src/**/*.ejs' build/esm && cpy 'src/**/*.ejs' build/cjs"
   },
