feat(cli): enabled eslint fixing for template

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "11.1.0",
+    "eslint": "8.53.0",
     "ejs": "3.1.9",
     "glob": "10.3.10",
     "inquirer": "8.2.6",
@@ -21,7 +22,6 @@
     "node-fetch": "2.7.0",
     "ora": "5.4.1",
     "package-json": "6.5.0",
-    "prettier": "3.0.3",
     "pretty-error": "4.0.0",
     "semver": "7.5.4"
   },
