--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,8 @@
     "ora": "5.4.1",
     "package-json": "6.5.0",
     "pretty-error": "4.0.0",
-    "semver": "7.5.4"
+    "semver": "7.5.4",
+    "yaml": "2.3.4"
   },
   "devDependencies": {
     "@types/eslint": "8.44.7",
