feat(modeler): new modeler package startup

--- a/packages/modeler/tsconfig.declaration.json
+++ b/packages/modeler/tsconfig.declaration.json
@@ -18,9 +18,6 @@
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
-      "path": "../modeler/tsconfig.declaration.json"
-    },
-    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
@@ -31,6 +28,9 @@
     },
     {
       "path": "../types/tsconfig.declaration.json"
+    },
+    {
+      "path": "../utils/tsconfig.declaration.json"
     }
   ]
 }
