--- a/packages/formatters/tsconfig.declaration.json
+++ b/packages/formatters/tsconfig.declaration.json
@@ -15,6 +15,9 @@
       "path": "../client/tsconfig.declaration.json"
     },
     {
+      "path": "../modeler/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
