--- a/packages/react-client/tsconfig.declaration.json
+++ b/packages/react-client/tsconfig.declaration.json
@@ -18,6 +18,9 @@
       "path": "../formatters/tsconfig.declaration.json"
     },
     {
+      "path": "../modeler/tsconfig.declaration.json"
+    },
+    {
       "path": "../react/tsconfig.declaration.json"
     },
     {
