--- a/packages/modeler/package.json
+++ b/packages/modeler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proedis/modeler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utilities to write and build model based on class-transformer",
   "keywords": [
     "proedis",
@@ -12,10 +12,10 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/types": "1.1.0",
-    "@proedis/utils": "1.3.0",
     "@fortawesome/fontawesome-common-types": "^6.4.2",
-    "@mantine/core": "^7.2.2"
+    "@mantine/core": "^7.2.2",
+    "@proedis/types": "1.1.0",
+    "@proedis/utils": "1.3.1"
   },
   "devDependencies": {
     "dayjs": "^1.11.10"
