chore(react-client): set peerDependenciesMeta to optionally require react-dom

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -32,5 +32,10 @@
       "root:react-dom"
     ]
   },
+  "peerDependenciesMeta": {
+    "react-dom": {
+      "optional": true
+    }
+  },
   "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
