feat(utils): implemented sorting for Date and DayJS

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,7 +27,13 @@
     "@types/get-value": "^3.0.3",
     "@types/natural-compare": "^1.4.1",
     "@types/object-hash": "^3.0.2",
-    "@types/set-value": "^4.0.1"
+    "@types/set-value": "^4.0.1",
+    "dayjs": "^1.11.10"
+  },
+  "proedisMetadata": {
+    "reflectPeerDependencies": [
+      "dayjs"
+    ]
   },
   "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
 }
