--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/parser": "6.10.0",
     "cpy": "8.1.2",
     "class-transformer": "^0.5.1",
+    "dayjs": "^1.11.12",
     "eslint": "8.53.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-proedis": "*",
