--- a/packages/modeler/package.json
+++ b/packages/modeler/package.json
@@ -17,14 +17,13 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-common-types": "^6.4.2",
-    "@mantine/core": "^7.2.2",
-    "dayjs": "^1.11.10"
+    "@mantine/core": "^7.2.2"
   },
   "proedisMetadata": {
     "reflectPeerDependencies": [
       "root:class-transformer",
       "root:reflect-metadata",
-      "dayjs"
+      "root:dayjs"
     ]
   }
 }
