--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,12 +27,11 @@
     "@types/get-value": "^3.0.3",
     "@types/natural-compare": "^1.4.1",
     "@types/object-hash": "^3.0.2",
-    "@types/set-value": "^4.0.1",
-    "dayjs": "^1.11.10"
+    "@types/set-value": "^4.0.1"
   },
   "proedisMetadata": {
     "reflectPeerDependencies": [
-      "dayjs"
+      "root:dayjs"
     ]
   },
   "gitHead": "e5cd5bc288cc6ba93f716278a9401c9a45abc0e8"
