--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,10 +15,10 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "devDependencies": {
-    "@proedis/tsconfig": "1.3.0"
+    "@proedis/tsconfig": "1.3.0",
+    "@proedis/types": "1.1.0"
   },
   "dependencies": {
-    "@proedis/types": "1.1.0",
     "@proedis/utils": "1.3.3",
     "axios": "1.6.1",
     "logdown": "3.3.1",
