--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -15,13 +15,13 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/types": "1.1.0",
     "@proedis/utils": "1.3.3"
   },
   "devDependencies": {
     "@proedis/client": "1.7.5",
     "@proedis/react": "1.3.4",
-    "@proedis/tsconfig": "1.3.0"
+    "@proedis/tsconfig": "1.3.0",
+    "@proedis/types": "1.1.0"
   },
   "proedisMetadata": {
     "reflectPeerDependencies": [
