--- a/packages/modeler/package.json
+++ b/packages/modeler/package.json
@@ -12,13 +12,13 @@
     "build": "rollup --config ../../rollup.config.mjs"
   },
   "dependencies": {
-    "@proedis/types": "1.1.0",
     "@proedis/utils": "1.3.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-common-types": "^6.6.0",
     "@mantine/core": "^7.12.1",
-    "@mantine/hooks": "^7.12.1"
+    "@mantine/hooks": "^7.12.1",
+    "@proedis/types": "1.1.0"
   },
   "proedisMetadata": {
     "reflectPeerDependencies": [
