build(packages): porting of license field in package.json

--- a/packages/eslint-config-proedis/package.json
+++ b/packages/eslint-config-proedis/package.json
@@ -11,6 +11,7 @@
     "typescript",
     "styleguide"
   ],
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "build": "node ../../scripts/compile-plain.js"
