--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "authentication",
     "api"
   ],
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
