--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -10,6 +10,7 @@
     "currencies",
     "numbers"
   ],
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
