--- a/packages/modeler/package.json
+++ b/packages/modeler/package.json
@@ -7,6 +7,7 @@
     "typescript",
     "class-transformer"
   ],
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
