--- a/packages/react-native-client/package.json
+++ b/packages/react-native-client/package.json
@@ -11,6 +11,7 @@
     "authentication",
     "react-native"
   ],
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
