--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,7 @@
     "react",
     "hooks"
   ],
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "build": "rollup --config ../../rollup.config.mjs"
