--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "node ../../scripts/compile-plain.js"
   },
+  "license": "MIT",
   "proedisMetadata": {
     "reflectPeerDependencies": [
       "root:typescript"
