chore: remove linting from release script

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "release:version": "lerna version --exact",
     "release:build": "lerna run build",
     "release:publish": "lerna publish from-package --contents build",
-    "release": "yarn release:lint && yarn release:version && yarn release:build && yarn release:publish",
+    "release": "yarn release:version && yarn release:build && yarn release:publish",
     "prepare": "husky install"
   },
   "devDependencies": {
