feat: add support for data transformation using `class-transformer` in query results

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -30,7 +30,9 @@
       "@proedis/react",
       "root:@tanstack/react-query",
       "root:react",
-      "root:react-dom"
+      "root:react-dom",
+      "root:class-transformer",
+      "root:reflect-metadata"
     ]
   },
   "peerDependenciesMeta": {
